# AI_solo_coder_task_B_153

./: Dockerfile.backend  Dockerfile.frontend  Dockerfile.simulator  README.md  cargo_check_err.txt  check_output.txt  docker-compose.yml  era_test_output.txt  stderr.txt  test_output.txt  test_output2.txt  test_result.txt
backend/: Cargo.toml  test_output.txt
backend/config/: app_config.json
backend/src/: alarm_mqtt.rs  api.rs  balance_optimizer.rs  ch_writer.rs  config.rs  era_comparator.rs  main.rs  material_comparator.rs  metrics.rs  mqtt_receiver.rs  quality_predictor.rs  rotor_thread_pool.rs  vibration_simulator.rs  vr_spindle.rs
clickhouse/config.d/: overrides.xml
frontend/: app_main.js  balance_optimizer.js  era_comparator.js  index.html  material_comparator.js  spindle_3d.js  style.css  vibration_panel.js  vr_spindle.js
mosquitto/: mosquitto.conf
nginx/: default.conf  nginx.conf
prometheus/: prometheus.yml
simulator/: spindle_simulator.py
sql/: init.sql
