[package]
name = "spindle-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = "0.23"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.6", features = ["macros"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
axum-prometheus = "0.4"
chrono = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-log = "0.2"
prometheus = { version = "0.13", features = ["process"] }
rand = "0.8"
